@@ -143,3 +143,4 @@ v 1.9:
 	  This also means we no longer update permissions before we change worlds.
 	- A command of '/manload' with no world arguments now performs a full reload of GM.
 	- Update for Bukkit R5 compatability.
+	- Removed BukkitPermsOverride as this is now the default with bukkit handling child nodes.
